# jaucp-scoring-plus

./: LICENSE  README.md  bom.json  error_log.txt  eslint.config.js  index.html  package-lock.json  package.json
.agent/rules/: 4.md  5.md
.github/workflows/: release.yml  security-audit.yml
src/: main.ts  styles.css  styles_append.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: cerebras.ts  export.ts  gemini.ts  history.ts  models.ts  ogp.ts  prompts.ts  schemas.ts  scoring.ts  settings.ts  store.ts
