[package]
name = "jaucp-scoring"
version = "0.1.0"
description = "日本語版アンサイクロペディア記事採点ツール"
authors = ["you"]
edition = "2021"

[lib]
name = "jaucp_scoring_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
